# backend_ChatZera

./: README.md  pyproject.toml  requirements.txt
backend_chatzera/: api.py
backend_chatzera/api/: api.py
backend_chatzera/client/: chat_client.py
backend_chatzera/server/: chat_server.py  consumidor_mensagens.py  message_broker.py  produtor_mensagens.py
